# lifers

./: .env  Cargo.toml  Dockerfile  README.md  app.css  docker-compose.production.yaml  docker-compose.yaml  justfile  package-lock.json  package.json
.helix/: languages.toml
migrations/: 20250409201931_init.sql  20250415201432_Adding_workout_schedule_item.sql
src/: main.rs  users.rs
src/db/postgres/: mod.rs
src/web/: app.rs  auth.rs  fallback.rs  mod.rs  protected.rs
src/web/entities/: mod.rs  workout.rs
src/web/pages/: dashboard.rs  index.rs  mod.rs  workout_schedule.rs
static/: output.css
templates/: alerts.html  app.html  base.html  fallback.html  index.html  output.css
templates/auth/: login.html  register.html
templates/workout_schedule/: list.html
