# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "lifers"
version = "0.1.0"
description = "Life tracking & helping software"
authors = ["Koen Molenaar <github@sl.koenmolenaar.nl>"]
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/K0enM/lifers"
homepage = "https://github.com/K0enM/lifers"
repository = "https://github.com/K0enM/lifers"
keywords = ["lifers"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "lifers"
path = "src/main.rs"

[dependencies]
axum = {version = "0.8", features = ["macros"]}

# https://docs.rs/axum-extra/latest/axum_extra/
axum-extra = "0.10"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "uuid"] }
dotenv = "0.15.0"
axum-login = "0.17.0"
axum-messages = "0.8.0"
password-auth = "1.0.0"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
time = "0.3.41"
askama = "0.14.0"
include_dir = "0.7.4"
mime_guess = "2.0.5"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
hex = "0.4.3"

[profile.dev.package.askama_derive]
opt-level = 3
